--- a/practica1_listas/practica1.html
+++ b/practica1_listas/practica1.html
@@ -12,50 +12,70 @@
     <li>Scotland</li>
     <li>Denmark</li>
   </ol>  
+
+<h2>Ejercicio 2</h2>
+<p>Utilizando la lista anterior, invierte el orden de los números.</p>
+<ol reversed>
+    <li>Russia</li>
+    <li>China</li>
+    <li>Germany</li>
+    <li>Scotland</li>
+    <li>Denmark</li>
+  </ol>  
   
-## Ejercicio 2
-Utilizando la lista anterior, invierte el orden de los números.
-```html
 
-```
-Pista: reversed
-## Ejercicio 3
-Haz una lista ordenada con letras en mayúscula de tus comidas favoritas.
-Pista: type A
-```html
+<h2>Ejercicio 3</h2>
+<p>Haz una lista ordenada con letras en mayúscula de tus comidas favoritas.</p>
 
-```
-## Ejercicio 4
-Utilizando la lista ordenada del ejercicio 3, ahora ordena tus comidas favoritas con
-números romanos en mayúscula.
-Pista: type l
+<ol type="A">
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+    <li>Pizza</li>
+    <li>Ice cream</li>
+  </ol>  
+  
 
-```html
+<h2>Ejercicio 4</h2>
+<p>Utilizando la lista ordenada del ejercicio 3, ahora ordena tus comidas favoritas con
+    números romanos en mayúscula.</p>
+<ol type="I">
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+    <li>Pizza</li>
+    <li>Ice cream</li>
+  </ol> 
 
-```
-## Ejercicio 5
-Haz una lista desordenada de tus películas favoritas. Utilizarás para el estilo de la
-lista cuadraditos negros.
-Pista: Type square
+<h2>Ejercicio 5</h2>
+<p>Haz una lista desordenada de tus películas favoritas. Utilizarás para el estilo de la
+    lista cuadraditos negros.</p>
+    <ul style="list-style-type:square;">
+        <li>Fallen Angels - Wong Kar-wai</li>
+        <li>City of God - Fernando Meirelles, Kátia Lund</li>
+        <li>The Big Lebowski- Ethan Jesse Coen, Joel David Coen</li>
+      </ul> 
 
-```html
+<h2>Ejercicio 6</h2>
+<p>Usando como ejemplo la lista desordenada del ejercicio 5, ahora utiliza como estilo
+    de la lista puntos o circulitos negros.</p>
+    <ul style="list-style-type:disc;">
+        <li>Fallen Angels - Wong Kar-wai</li>
+        <li>City of God - Fernando Meirelles, Kátia Lund</li>
+        <li>The Big Lebowski- Ethan Jesse Coen, Joel David Coen</li>
+      </ul> 
 
-```
-## Ejercicio 6
-Usando como ejemplo la lista desordenada del ejercicio 5, ahora utiliza como estilo
-de la lista puntos o circulitos negros.
-Pista: type disk
-```html
-
-```
-## Ejercicio 7
-Haz una lista anidada de ciudades que quieres visitar en los próximos cinco años
-de al menos tres países distintos
-
-```html
-
-```
-
-
+<h2>Ejercicio 7</h2>
+<p>Haz una lista anidada de ciudades que quieres visitar en los próximos cinco años
+    de al menos tres países distintos</p>
+    <dl>
+        <dt>Scotland</dt>
+        <dd>- Glasgow</dd>
+        <dt>Russia</dt>
+        <dd>- Moscu</dd>
+        <dt>China</dt>
+        <dd>- Pekin</dd>
+      </dl>
+      
 </body>
 </html>
