se añade listas combinadas

--- a/listas-combinadas/listascombinadas.html
+++ b/listas-combinadas/listascombinadas.html
@@ -4,13 +4,17 @@
     <h1> Jugadores de fútbol de leyenda </h1>
     <dl>
         <dt>España</dt>
-        <dd>- Glasgow</dd>
-        <dd>- Glasgow</dd>
-        <dd>- Glasgow</dd>
-        <dt>Russia</dt>
-        <dd>- Moscu</dd>
-        <dt>China</dt>
-        <dd>- Pekin</dd>
+        <dd>- Casillas</dd>
+        <dd>- Xavi</dd>
+        <dd>- Iniesta</dd>
+        <dt>Francia</dt>
+        <dd>- Zidane</dd>
+        <dd>- Henry</dd>
+        <dd>- Barthez</dd>
+        <dt>Brasil</dt>
+        <dd>- Ronaldo</dd>
+        <dd>- Pelé</dd>
+        <dd>- Ronaldinho</dd>
       </dl>
       
 
