--- a/practico tablas/tablas.html
+++ b/practico tablas/tablas.html
@@ -10,12 +10,12 @@
             width: 100%;
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 3px solid #ddd;
             padding: 8px;
             text-align: center;
         }
         th {
-            background-color: #d11414;
+            background-color: #ffffff;
         }
     </style>
 
@@ -25,53 +25,54 @@
         width: 100%;
     }
     th, td {
-        border: 1px solid #ddd;
+        border: 1px solid #c0bbbb;
         padding: 8px;
         text-align: center;
     }
     th {
-        background-color: #f2f2f2;
+        background-color: #ffffff;
     }
 </style>
-
 
 </head>
 <body>
     <table>
         <thead>
             <tr>
-                <th>Producto</th>
-                <th>Capacidad</th>
-                <th>Colores</th>
-                <th>Pantalla</th>
-                <th>Tiempo de Carga</th>
+                <th></th>
+                <th colspan="2">1ª Eval</th>
+                <th colspan="2">2ª Eval</th>
+                <th colspan="2">3ª Eval</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Producto 1</td>
-                <td>2GB</td>
-                <td>Blanco, Negro, Rosa</td>
-                <td>3 pulgadas</td>
-                <td>1 hora</td>
-                <td><img src="120_ipod.png" alt="Producto 1" width="100" height="80"></td>
+                <td></td>
+                <td style= background-color:green>Aprobados</td>
+                <td style= background-color:red>Suspendidos</td>
+                <td style= background-color:green>Aprobados</td>
+                <td style= background-color:red>Suspendidos</td>
+                <td style= background-color:green>Aprobados</td>
+                <td style= background-color:red>Suspendidos</td>
 
             </tr>
             <tr>
-                <td>Producto 2</td>
-                <td>4GB</td>
-                <td>Negro, Dorado</td>
-                <td>7 pulgadas</td>
-                <td>30 minutos para 75%</td>
-                <td><img src="100_ipod.png" alt="Producto 2" width="100" height="80"></td>
-
+                <td>Informática</td>
+                <td>20</td>
+                <td>2</td>
+                <td>19</td>
+                <td>3</td>
+                <td>22</td>
+                <td>0</td>
             </tr>
             <tr>
-                <td>Producto 3</td>
-                <td>8GB</td>
-                <td>Negro, Blanco</td>
-                <td>5 horas</td>
-                <td>1 hora</td>
+                <td>Matemáticas</td>
+                <td>10</td>
+                <td>12</td>
+                <td>15</td>
+                <td>7</td>
+                <td>12</td>
+                <td>10</td>
             </tr>
         </tbody>
     </table>
