se añade ejercicios formularios y tarea03 html

--- a/Formularios/formulario.html
+++ b/Formularios/formulario.html
@@ -18,13 +18,42 @@
         
 
 
-        <p>Tu sexo:</p> <br>
+        <p>Tu sexo:</p>
+        <br>
         <input type="radio" id="hombre" name="hombre" value="Hombre"/>
-        <label for="hombre">Hombre</label><br>
+        <label for="hombre">Hombre</label>
+        <br>
         <input type="radio" id="mujer" name="mujer" value="Mujer"/>
         <label for="mujer">Mujer</label>
+        <br>
+        <input type="radio" id="Perro" name="Perro" value="Perro"/>
+        <label for="perro">Perro</label>
+        <br>
+        <input type="color" name="color"/>
+        <br>
+        <input type="date" name="fecha"/>
+        <br>
+        <input type="button" onclick=alert value="boton"/>
+        <br>
+        <input type="datetime-local" name="fecha y hora local"/>
+        <br>
+        <input type="file" name="fichero" />
+        <br>
+        <input  type="number" name="nombre"/>
+        <br>
+        <input type="range" min="0" max="5"/>
+        <br>
+        <input type="search" name="buscar"/>
+        <br>
+        <input type="tel" name="phone"/>
+        <br>
+        <input type="time" name="hora"/>
+        <br>
+        <input type="url" name="url"/>
+        <br>
+        <input type="week" name="semana"/>
+        <br>
 
-        <label fpr>Estás estudiando: </label>
     </form>
 </body>
 </html>
