--- a/MAQUETA 02/index.html
+++ b/MAQUETA 02/index.html
@@ -17,5 +17,6 @@
         <article> Contenido 2</article>
         <article> Contenido 3</article>
     </main>
+    <footer>Pie de página</footer>
 </body>
 </html>
